--- a/modules/apps/account/account-admin-web/src/main/resources/content/Language_ar.properties
+++ b/modules/apps/account/account-admin-web/src/main/resources/content/Language_ar.properties
@@ -1,4 +1,5 @@
 account-display-data=بيانات عرض الحساب
+account-group-name=Account Group Name (Automatic Copy)
 account-id=معرف الحساب
 account-roles=أدوار الحساب
 action.ADD_ACCOUNT_ENTRY=إضافة إدخال حساب
@@ -8,6 +9,7 @@ action.MANAGE_ORGANIZATIONS=إدارة المؤسّسات
 action.MANAGE_SUBORGANIZATIONS_ACCOUNTS=إدارة حسابات المنظمات الفرعية
 action.VIEW_ORGANIZATIONS=عرض المنظمات
 action.VIEW_USERS=عرض المستخدمين
+add-account-group=Add Account Group (Automatic Copy)
 add-account-role=إضافة دور الحساب
 add-domain=إضافة مجال
 add-new-user-to-x=إضافة مستخدم جديد إلى {0}
@@ -38,6 +40,7 @@ manage-users=إدارة المستخدمين
 model.resource.com.liferay.account=الحساب
 model.resource.com.liferay.account.model.AccountEntry=إدخال الحساب
 more-information=مزيد من المعلومات
+no-account-groups-were-found=No account groups were found. (Automatic Copy)
 no-accounts-were-found=لم يتم العثور على أي حسابات.
 no-assigned-account=بلا حساب معين
 parent-account=الحساب الرئيسي
