--- a/modules/apps/account/account-admin-web/src/main/resources/content/Language_ca.properties
+++ b/modules/apps/account/account-admin-web/src/main/resources/content/Language_ca.properties
@@ -1,4 +1,5 @@
 account-display-data=Dades de visualització del compte
+account-group-name=Account Group Name (Automatic Copy)
 account-id=ID del compte
 account-roles=Rols del compte
 action.ADD_ACCOUNT_ENTRY=Afegeix una entrada de compte
@@ -8,6 +9,7 @@ action.MANAGE_ORGANIZATIONS=Gestiona les organitzacions
 action.MANAGE_SUBORGANIZATIONS_ACCOUNTS=Gestioneu els comptes de les suborganitzacions
 action.VIEW_ORGANIZATIONS=Mostra les organitzacions
 action.VIEW_USERS=Mostra els usuaris
+add-account-group=Add Account Group (Automatic Copy)
 add-account-role=Afegeix un rol de compte
 add-domain=Afegeix un domini
 add-new-user-to-x=Afegeix un usuari nou a {0}
@@ -38,6 +40,7 @@ manage-users=Gestiona els usuaris
 model.resource.com.liferay.account=Compte
 model.resource.com.liferay.account.model.AccountEntry=Entrada de compte
 more-information=Més informació
+no-account-groups-were-found=No account groups were found. (Automatic Copy)
 no-accounts-were-found=No s'ha trobat cap compte.
 no-assigned-account=No hi ha cap compte assignat
 parent-account=Compte pare
