--- a/modules/apps/account/account-admin-web/src/main/resources/content/Language_da.properties
+++ b/modules/apps/account/account-admin-web/src/main/resources/content/Language_da.properties
@@ -1,4 +1,5 @@
 account-display-data=Account Display Data
+account-group-name=Account Group Name (Automatic Copy)
 account-id=Account ID
 account-roles=Account Roles
 action.ADD_ACCOUNT_ENTRY=Add Account Entry
@@ -8,6 +9,7 @@ action.MANAGE_ORGANIZATIONS=Manage Organizations
 action.MANAGE_SUBORGANIZATIONS_ACCOUNTS=Manage Suborganizations Accounts
 action.VIEW_ORGANIZATIONS=View Organizations
 action.VIEW_USERS=View Users
+add-account-group=Add Account Group (Automatic Copy)
 add-account-role=Add Account Role
 add-domain=Add Domain
 add-new-user-to-x=Tilføj ny bruger til {0}
@@ -38,6 +40,7 @@ manage-users=Manage Users
 model.resource.com.liferay.account=Account
 model.resource.com.liferay.account.model.AccountEntry=Account Entry
 more-information=More Information
+no-account-groups-were-found=No account groups were found. (Automatic Copy)
 no-accounts-were-found=No accounts were found.
 no-assigned-account=No Assigned Account
 parent-account=Parent Account
