--- a/modules/apps/account/account-admin-web/src/main/resources/content/Language_de.properties
+++ b/modules/apps/account/account-admin-web/src/main/resources/content/Language_de.properties
@@ -1,4 +1,5 @@
 account-display-data=Daten zur Kontoanzeige
+account-group-name=Account Group Name (Automatic Copy)
 account-id=Konto-ID
 account-roles=Kontorollen
 action.ADD_ACCOUNT_ENTRY=Kontoeintrag hinzufügen
@@ -8,6 +9,7 @@ action.MANAGE_ORGANIZATIONS=Organisationen verwalten
 action.MANAGE_SUBORGANIZATIONS_ACCOUNTS=Untergeordnete Organisationskonten verwalten
 action.VIEW_ORGANIZATIONS=Organisationen anzeigen
 action.VIEW_USERS=Benutzer anzeigen
+add-account-group=Add Account Group (Automatic Copy)
 add-account-role=Kontorolle hinzufügen
 add-domain=Domain hinzufügen
 add-new-user-to-x=Neuen Benutzer zu {0} hinzufügen
@@ -38,6 +40,7 @@ manage-users=Benutzer verwalten
 model.resource.com.liferay.account=Konto
 model.resource.com.liferay.account.model.AccountEntry=Kontoeintrag
 more-information=Zusätzliche Informationen
+no-account-groups-were-found=No account groups were found. (Automatic Copy)
 no-accounts-were-found=Es wurden keine Konten gefunden.
 no-assigned-account=Kein zugewiesenes Konto
 parent-account=Übergeordnetes Konto
