--- a/modules/apps/account/account-admin-web/src/main/resources/content/Language_es.properties
+++ b/modules/apps/account/account-admin-web/src/main/resources/content/Language_es.properties
@@ -1,4 +1,5 @@
 account-display-data=Datos de visualización de cuentas
+account-group-name=Account Group Name (Automatic Copy)
 account-id=Identificador de cuenta
 account-roles=Roles de cuenta
 action.ADD_ACCOUNT_ENTRY=Añadir entrada de cuenta
@@ -8,6 +9,7 @@ action.MANAGE_ORGANIZATIONS=Administrar organizaciones
 action.MANAGE_SUBORGANIZATIONS_ACCOUNTS=Administrar cuentas de suborganizaciones
 action.VIEW_ORGANIZATIONS=Ver organizaciones
 action.VIEW_USERS=Ver usuarios
+add-account-group=Add Account Group (Automatic Copy)
 add-account-role=Añadir rol de cuenta
 add-domain=Añadir dominio
 add-new-user-to-x=Añadir nuevo usuario a {0}
@@ -38,6 +40,7 @@ manage-users=Administrar usuarios
 model.resource.com.liferay.account=Cuenta
 model.resource.com.liferay.account.model.AccountEntry=Entrada de cuenta
 more-information=Más información
+no-account-groups-were-found=No account groups were found. (Automatic Copy)
 no-accounts-were-found=No se encontraron cuentas.
 no-assigned-account=No hay cuentas asignadas
 parent-account=Cuenta primaria
