--- a/modules/apps/account/account-admin-web/src/main/resources/content/Language_fi.properties
+++ b/modules/apps/account/account-admin-web/src/main/resources/content/Language_fi.properties
@@ -1,4 +1,5 @@
 account-display-data=Tilin Näyttötiedot
+account-group-name=Account Group Name (Automatic Copy)
 account-id=Tilinumero
 account-roles=Tiliroolit
 action.ADD_ACCOUNT_ENTRY=Lisää Tilimerkintä
@@ -8,6 +9,7 @@ action.MANAGE_ORGANIZATIONS=Hallinnoi Organisaatioita
 action.MANAGE_SUBORGANIZATIONS_ACCOUNTS=Hallinnoi Alaorganisaatioiden Tilejä
 action.VIEW_ORGANIZATIONS=Näytä Organisaatiot
 action.VIEW_USERS=Näytä Käyttäjät
+add-account-group=Add Account Group (Automatic Copy)
 add-account-role=Lisää Tilirooli
 add-domain=Lisää Toimialue
 add-new-user-to-x=Lisää Uusi Käyttäjä Kohteeseen {0}
@@ -38,6 +40,7 @@ manage-users=Hallinnoi käyttäjiä
 model.resource.com.liferay.account=Tili
 model.resource.com.liferay.account.model.AccountEntry=Tilimerkintä
 more-information=Lisätietoja
+no-account-groups-were-found=No account groups were found. (Automatic Copy)
 no-accounts-were-found=Yhtään tiliä ei löytynyt.
 no-assigned-account=Ei Liitettyä Tiliä
 parent-account=Ylätason Tili
