--- a/modules/apps/account/account-admin-web/src/main/resources/content/Language_fr.properties
+++ b/modules/apps/account/account-admin-web/src/main/resources/content/Language_fr.properties
@@ -1,4 +1,5 @@
 account-display-data=Données d'affichage du compte
+account-group-name=Account Group Name (Automatic Copy)
 account-id=ID du compte
 account-roles=Rôles de compte
 action.ADD_ACCOUNT_ENTRY=Ajouter une entrée de compte
@@ -8,6 +9,7 @@ action.MANAGE_ORGANIZATIONS=Gérer les organisations
 action.MANAGE_SUBORGANIZATIONS_ACCOUNTS=Gérer les comptes des sous-organisations
 action.VIEW_ORGANIZATIONS=Voir les organisations
 action.VIEW_USERS=Voir les utilisateurs
+add-account-group=Add Account Group (Automatic Copy)
 add-account-role=Ajouter un rôle de compte
 add-domain=Ajouter un domaine
 add-new-user-to-x=Ajouter un nouvel utilisateur à {0}
@@ -38,6 +40,7 @@ manage-users=Gérer les utilisateurs
 model.resource.com.liferay.account=Compte
 model.resource.com.liferay.account.model.AccountEntry=Entrée de compte
 more-information=Plus d'informations
+no-account-groups-were-found=No account groups were found. (Automatic Copy)
 no-accounts-were-found=Aucun compte n'a été trouvé.
 no-assigned-account=Aucun compte assigné
 parent-account=Compte parent
