--- a/modules/apps/account/account-admin-web/src/main/resources/content/Language_hu.properties
+++ b/modules/apps/account/account-admin-web/src/main/resources/content/Language_hu.properties
@@ -1,4 +1,5 @@
 account-display-data=A fiók megjelenített adatai
+account-group-name=Account Group Name (Automatic Copy)
 account-id=Fiókazonosító
 account-roles=Fiókok szerepköre
 action.ADD_ACCOUNT_ENTRY=Fiókbejegyzés hozzáadása
@@ -8,6 +9,7 @@ action.MANAGE_ORGANIZATIONS=Szervezetek kezelése
 action.MANAGE_SUBORGANIZATIONS_ACCOUNTS=Alszervezetek fiókjainak a kezelése
 action.VIEW_ORGANIZATIONS=Szervezetek megjelenítése
 action.VIEW_USERS=Felhasználók megjelenítése
+add-account-group=Add Account Group (Automatic Copy)
 add-account-role=Fiók szerepkör hozzáadása
 add-domain=Tartomány hozzáadása
 add-new-user-to-x=Új felhasználó hozzáadása ehhez: {0}
@@ -38,6 +40,7 @@ manage-users=Felhasználók kezelése
 model.resource.com.liferay.account=Fiók
 model.resource.com.liferay.account.model.AccountEntry=Fiókbejegyzés
 more-information=További információk
+no-account-groups-were-found=No account groups were found. (Automatic Copy)
 no-accounts-were-found=Nem található fiók.
 no-assigned-account=Nincs hozzárendelt fiók
 parent-account=Fölérendelt fiókopy)
