--- a/modules/apps/account/account-admin-web/src/main/resources/content/Language_ja.properties
+++ b/modules/apps/account/account-admin-web/src/main/resources/content/Language_ja.properties
@@ -1,4 +1,5 @@
 account-display-data=アカウントディスプレイデータ
+account-group-name=Account Group Name (Automatic Copy)
 account-id=アカウントID
 account-roles=アカウントロール
 action.ADD_ACCOUNT_ENTRY=アカウントエントリを追加
@@ -8,6 +9,7 @@ action.MANAGE_ORGANIZATIONS=組織を管理
 action.MANAGE_SUBORGANIZATIONS_ACCOUNTS=サブ組織アカウントの管理
 action.VIEW_ORGANIZATIONS=組織の表示
 action.VIEW_USERS=ユーザーの参照
+add-account-group=Add Account Group (Automatic Copy)
 add-account-role=アカウントロールを追加
 add-domain=ドメインを追加
 add-new-user-to-x={0}に新規ユーザーを追加
@@ -38,6 +40,7 @@ manage-users=ユーザーを管理する
 model.resource.com.liferay.account=アカウント
 model.resource.com.liferay.account.model.AccountEntry=アカウントエントリ
 more-information=詳細情報
+no-account-groups-were-found=No account groups were found. (Automatic Copy)
 no-accounts-were-found=アカウントが見つかりません。
 no-assigned-account=割り当てられたアカウントはありません
 parent-account=親アカウント
