--- a/modules/apps/account/account-admin-web/src/main/resources/content/Language_nl.properties
+++ b/modules/apps/account/account-admin-web/src/main/resources/content/Language_nl.properties
@@ -1,4 +1,5 @@
 account-display-data=Weergavedata account
+account-group-name=Account Group Name (Automatic Copy)
 account-id=Account-ID
 account-roles=Accountrollen
 action.ADD_ACCOUNT_ENTRY=Accountinvoer toevoegen
@@ -8,6 +9,7 @@ action.MANAGE_ORGANIZATIONS=Organisaties beheren
 action.MANAGE_SUBORGANIZATIONS_ACCOUNTS=Accounts van suborganisaties beheren
 action.VIEW_ORGANIZATIONS=Organisaties bekijken
 action.VIEW_USERS=Gebruikers bekijken
+add-account-group=Add Account Group (Automatic Copy)
 add-account-role=Accountrol toevoegen
 add-domain=Domein toevoegen
 add-new-user-to-x=Nieuwe gebruiker toevoegen aan {0}
@@ -38,6 +40,7 @@ manage-users=Gebruikers beheren
 model.resource.com.liferay.account=Account
 model.resource.com.liferay.account.model.AccountEntry=Accountinvoer
 more-information=Meer informatie
+no-account-groups-were-found=No account groups were found. (Automatic Copy)
 no-accounts-were-found=Er werden geen accounts gevonden.
 no-assigned-account=Geen toegewezen account
 parent-account=Bovenliggend account
