--- a/modules/apps/account/account-admin-web/src/main/resources/content/Language_pt_BR.properties
+++ b/modules/apps/account/account-admin-web/src/main/resources/content/Language_pt_BR.properties
@@ -1,4 +1,5 @@
 account-display-data=Dados de Exibição de Conta
+account-group-name=Account Group Name (Automatic Copy)
 account-id=ID de conta
 account-roles=Funções de Conta
 action.ADD_ACCOUNT_ENTRY=Adicionar registro de conta
@@ -8,6 +9,7 @@ action.MANAGE_ORGANIZATIONS=Gerenciar organizações
 action.MANAGE_SUBORGANIZATIONS_ACCOUNTS=Gerenciar contas de suborganizações
 action.VIEW_ORGANIZATIONS=Visualizar organizações
 action.VIEW_USERS=Visualizar usuários
+add-account-group=Add Account Group (Automatic Copy)
 add-account-role=Adicionar Função de Contas
 add-domain=Adicionar domínio
 add-new-user-to-x=Adicionar Novo Usuário a {0}
@@ -38,6 +40,7 @@ manage-users=Gerenciar usuários
 model.resource.com.liferay.account=Conta
 model.resource.com.liferay.account.model.AccountEntry=Registro da conta
 more-information=Mais informações
+no-account-groups-were-found=No account groups were found. (Automatic Copy)
 no-accounts-were-found=Nenhuma conta foi encontrada.
 no-assigned-account=Nenhuma Conta Atribuída
 parent-account=Conta Pai
