--- a/modules/apps/account/account-admin-web/src/main/resources/content/Language_sv.properties
+++ b/modules/apps/account/account-admin-web/src/main/resources/content/Language_sv.properties
@@ -1,4 +1,5 @@
 account-display-data=Data för kontovisning
+account-group-name=Account Group Name (Automatic Copy)
 account-id=Konto-ID
 account-roles=Kontoroller
 action.ADD_ACCOUNT_ENTRY=Lägg till kontopost
@@ -8,6 +9,7 @@ action.MANAGE_ORGANIZATIONS=Hantera organisationer
 action.MANAGE_SUBORGANIZATIONS_ACCOUNTS=Hantera konton för underorganisationer
 action.VIEW_ORGANIZATIONS=Visa organisationer
 action.VIEW_USERS=Visa användare
+add-account-group=Add Account Group (Automatic Copy)
 add-account-role=Lägg till kontoroll
 add-domain=Lägg till domän
 add-new-user-to-x=Lägg till ny användare i {0}
@@ -38,6 +40,7 @@ manage-users=Hantera roller
 model.resource.com.liferay.account=Konto
 model.resource.com.liferay.account.model.AccountEntry=Kontopost
 more-information=Mer information
+no-account-groups-were-found=No account groups were found. (Automatic Copy)
 no-accounts-were-found=Inga konton hittades.
 no-assigned-account=Inget tilldelat konto
 parent-account=Överordnat konto
