--- a/modules/apps/account/account-admin-web/src/main/resources/content/Language_zh_CN.properties
+++ b/modules/apps/account/account-admin-web/src/main/resources/content/Language_zh_CN.properties
@@ -1,4 +1,5 @@
 account-display-data=帐户显示数据
+account-group-name=Account Group Name (Automatic Copy)
 account-id=帐户 ID
 account-roles=帐户角色
 action.ADD_ACCOUNT_ENTRY=添加帐户条目
@@ -8,6 +9,7 @@ action.MANAGE_ORGANIZATIONS=管理组织
 action.MANAGE_SUBORGANIZATIONS_ACCOUNTS=管理子组织帐户
 action.VIEW_ORGANIZATIONS=查看组织
 action.VIEW_USERS=查看用户
+add-account-group=Add Account Group (Automatic Copy)
 add-account-role=添加帐户角色
 add-domain=添加域
 add-new-user-to-x=将新用户添加到 {0} 中
@@ -38,6 +40,7 @@ manage-users=管理用户
 model.resource.com.liferay.account=帐户
 model.resource.com.liferay.account.model.AccountEntry=帐户条目
 more-information=更多信息
+no-account-groups-were-found=No account groups were found. (Automatic Copy)
 no-accounts-were-found=未找到帐户。
 no-assigned-account=没有分配的帐户
 parent-account=父帐户
