--- a/modules/apps/account/account-admin-web/src/main/resources/content/Language_en_AU.properties
+++ b/modules/apps/account/account-admin-web/src/main/resources/content/Language_en_AU.properties
@@ -1,4 +1,5 @@
 account-display-data=Account Display Data (Automatic Copy)
+account-group-name=Account Group Name (Automatic Copy)
 account-id=Account ID (Automatic Copy)
 account-roles=Account Roles (Automatic Copy)
 action.ADD_ACCOUNT_ENTRY=Add Account Entry (Automatic Copy)
@@ -8,6 +9,7 @@ action.MANAGE_ORGANIZATIONS=Manage Organizations (Automatic Copy)
 action.MANAGE_SUBORGANIZATIONS_ACCOUNTS=Manage Suborganizations Accounts (Automatic Copy)
 action.VIEW_ORGANIZATIONS=View Organizations (Automatic Copy)
 action.VIEW_USERS=View Users (Automatic Copy)
+add-account-group=Add Account Group (Automatic Copy)
 add-account-role=Add Account Role (Automatic Copy)
 add-domain=Add Domain (Automatic Copy)
 add-new-user-to-x=Add New User to {0} (Automatic Copy)
@@ -38,6 +40,7 @@ manage-users=Manage Users (Automatic Copy)
 model.resource.com.liferay.account=Account (Automatic Copy)
 model.resource.com.liferay.account.model.AccountEntry=Account Entry (Automatic Copy)
 more-information=More Information (Automatic Copy)
+no-account-groups-were-found=No account groups were found. (Automatic Copy)
 no-accounts-were-found=No accounts were found. (Automatic Copy)
 no-assigned-account=No Assigned Account (Automatic Copy)
 parent-account=Parent Account (Automatic Copy)
