--- a/modules/apps/account/account-admin-web/src/main/resources/content/Language_gl.properties
+++ b/modules/apps/account/account-admin-web/src/main/resources/content/Language_gl.properties
@@ -1,4 +1,5 @@
 account-display-data=Datos de visualización de contas
+account-group-name=Account Group Name (Automatic Copy)
 account-id=Account ID
 account-roles=Roles de conta
 action.ADD_ACCOUNT_ENTRY=Add Account Entry
@@ -8,6 +9,7 @@ action.MANAGE_ORGANIZATIONS=Manage Organizations
 action.MANAGE_SUBORGANIZATIONS_ACCOUNTS=Manage Suborganizations Accounts
 action.VIEW_ORGANIZATIONS=View Organizations
 action.VIEW_USERS=View Users
+add-account-group=Add Account Group (Automatic Copy)
 add-account-role=Add Account Role
 add-domain=Add Domain
 add-new-user-to-x=Engadir novo usuario a {0}
@@ -38,6 +40,7 @@ manage-users=Administrar usuarios
 model.resource.com.liferay.account=Account
 model.resource.com.liferay.account.model.AccountEntry=Account Entry
 more-information=More Information
+no-account-groups-were-found=No account groups were found. (Automatic Copy)
 no-accounts-were-found=Non foi encontrada ningunha conta.
 no-assigned-account=No Assigned Account
 parent-account=Conta pai
