--- a/modules/apps/account/account-admin-web/src/main/resources/content/Language_it.properties
+++ b/modules/apps/account/account-admin-web/src/main/resources/content/Language_it.properties
@@ -1,4 +1,5 @@
 account-display-data=Dati di visualizzazione dell'account
+account-group-name=Account Group Name (Automatic Copy)
 account-id=Account ID
 account-roles=Ruoli dell'account
 action.ADD_ACCOUNT_ENTRY=Aggiungi un account
@@ -8,6 +9,7 @@ action.MANAGE_ORGANIZATIONS=Manage Organizations
 action.MANAGE_SUBORGANIZATIONS_ACCOUNTS=Manage Suborganizations Accounts
 action.VIEW_ORGANIZATIONS=View Organizations
 action.VIEW_USERS=View Users
+add-account-group=Add Account Group (Automatic Copy)
 add-account-role=Aggiungi un ruolo
 add-domain=Aggiungi un dominio
 add-new-user-to-x=Aggiungi un Nuovo Utente a {0}
@@ -38,6 +40,7 @@ manage-users=Gestisci Utenti
 model.resource.com.liferay.account=Profilo
 model.resource.com.liferay.account.model.AccountEntry=Registrazione dell'account
 more-information=More Information
+no-account-groups-were-found=No account groups were found. (Automatic Copy)
 no-accounts-were-found=Nessun account trovato.
 no-assigned-account=Nessun account assegnato
 parent-account=Account padre
