--- a/modules/apps/account/account-admin-web/src/main/resources/content/Language_nb.properties
+++ b/modules/apps/account/account-admin-web/src/main/resources/content/Language_nb.properties
@@ -1,4 +1,5 @@
 account-display-data=Kontovisningsdata
+account-group-name=Account Group Name (Automatic Copy)
 account-id=Account ID
 account-roles=Kontoroller
 action.ADD_ACCOUNT_ENTRY=Legg til kontoinnlegg
@@ -8,6 +9,7 @@ action.MANAGE_ORGANIZATIONS=Manage Organizations
 action.MANAGE_SUBORGANIZATIONS_ACCOUNTS=Manage Suborganizations Accounts
 action.VIEW_ORGANIZATIONS=View Organizations
 action.VIEW_USERS=View Users
+add-account-group=Add Account Group (Automatic Copy)
 add-account-role=Legg til kontorolle
 add-domain=Legg til domene
 add-new-user-to-x=Legg til ny bruker i {0}
@@ -38,6 +40,7 @@ manage-users=Administrer brukere
 model.resource.com.liferay.account=Konto
 model.resource.com.liferay.account.model.AccountEntry=Kontoinnlegg
 more-information=More Information
+no-account-groups-were-found=No account groups were found. (Automatic Copy)
 no-accounts-were-found=Ingen kontoer funnet.
 no-assigned-account=Ingen tilegnet konto
 parent-account=Overordnet konto
