LPS-114374 | LPS-111958 buildLang

--- a/modules/dxp/apps/app-builder-workflow/app-builder-workflow-lang/src/main/resources/content/Language_ar.properties
+++ b/modules/dxp/apps/app-builder-workflow/app-builder-workflow-lang/src/main/resources/content/Language_ar.properties
@@ -14,6 +14,7 @@ no-table-views-were-found-with-this-name-try-searching-again-with-a-different-na
 retrieving-all-form-views=جارٍ استرداد كافة طرق عرض النموذج...
 retrieving-all-table-views=جارٍ استرداد كافة طرق عرض الجدول...
 select-a-data-object-to-start-gathering-business-data=حدد كائن بيانات للبدء في تجميع بيانات الأعمال.
+step=Step (Automatic Copy)
 table-view=طريقة عرض الجدول
 unable-to-retrieve-form-views=تعذر استرداد طرق عرض النموذج.
 unable-to-retrieve-table-views=تعذر استرداد طرق عرض الجدول.
