--- a/modules/dxp/apps/app-builder-workflow/app-builder-workflow-lang/src/main/resources/content/Language_th.properties
+++ b/modules/dxp/apps/app-builder-workflow/app-builder-workflow-lang/src/main/resources/content/Language_th.properties
@@ -14,6 +14,7 @@ no-table-views-were-found-with-this-name-try-searching-again-with-a-different-na
 retrieving-all-form-views=กําลังเรียกมุมมองฟอร์มทั้งหมด... (Automatic Translation)
 retrieving-all-table-views=กําลังเรียกมุมมองตารางทั้งหมด... (Automatic Translation)
 select-a-data-object-to-start-gathering-business-data=เลือกวัตถุข้อมูลเพื่อเริ่มรวบรวมข้อมูลธุรกิจ (Automatic Translation)
+step=Step (Automatic Copy)
 table-view=มุมมองตาราง (Automatic Translation)
 unable-to-retrieve-form-views=ไม่สามารถเรียกข้อมูลมุมมองฟอร์มได้ (Automatic Translation)
 unable-to-retrieve-table-views=ไม่สามารถเรียกมุมมองตารางได้ (Automatic Translation)
