--- a/modules/dxp/apps/app-builder-workflow/app-builder-workflow-lang/src/main/resources/content/Language_uk.properties
+++ b/modules/dxp/apps/app-builder-workflow/app-builder-workflow-lang/src/main/resources/content/Language_uk.properties
@@ -14,6 +14,7 @@ no-table-views-were-found-with-this-name-try-searching-again-with-a-different-na
 retrieving-all-form-views=Отримання всіх подань форм... (Automatic Translation)
 retrieving-all-table-views=Отримання всіх подань таблиці... (Automatic Translation)
 select-a-data-object-to-start-gathering-business-data=Виберіть об'єкт даних, щоб розпочати збирання бізнес-даних. (Automatic Translation)
+step=Step (Automatic Copy)
 table-view=Табличні подання (Automatic Translation)
 unable-to-retrieve-form-views=Не вдалося отримати подання форми. (Automatic Translation)
 unable-to-retrieve-table-views=Не вдалося отримати подання таблиці. (Automatic Translation)
