--- a/modules/dxp/apps/app-builder-workflow/app-builder-workflow-lang/src/main/resources/content/Language_zh_CN.properties
+++ b/modules/dxp/apps/app-builder-workflow/app-builder-workflow-lang/src/main/resources/content/Language_zh_CN.properties
@@ -14,6 +14,7 @@ no-table-views-were-found-with-this-name-try-searching-again-with-a-different-na
 retrieving-all-form-views=正在检索所有表单视图…
 retrieving-all-table-views=正在检索所有表视图…
 select-a-data-object-to-start-gathering-business-data=选择一个数据对象以开始收集业务数据。
+step=Step (Automatic Copy)
 table-view=表视图
 unable-to-retrieve-form-views=无法检索表单视图。
 unable-to-retrieve-table-views=无法检索表视图。
