--- a/modules/dxp/apps/app-builder-workflow/app-builder-workflow-lang/src/main/resources/content/Language_bg.properties
+++ b/modules/dxp/apps/app-builder-workflow/app-builder-workflow-lang/src/main/resources/content/Language_bg.properties
@@ -14,6 +14,7 @@ no-table-views-were-found-with-this-name-try-searching-again-with-a-different-na
 retrieving-all-form-views=Извличане на всички изгледи на формуляри... (Automatic Translation)
 retrieving-all-table-views=Извличане на всички изгледи на таблица... (Automatic Translation)
 select-a-data-object-to-start-gathering-business-data=Изберете обект с данни, за да започнете да събирате бизнес данни. (Automatic Translation)
+step=Step (Automatic Copy)
 table-view=Изглед на таблица (Automatic Translation)
 unable-to-retrieve-form-views=Не може да се извлекат изгледи на формуляр. (Automatic Translation)
 unable-to-retrieve-table-views=Не може да се извлекат изгледи на таблица. (Automatic Translation)
