--- a/modules/dxp/apps/app-builder-workflow/app-builder-workflow-lang/src/main/resources/content/Language_ca.properties
+++ b/modules/dxp/apps/app-builder-workflow/app-builder-workflow-lang/src/main/resources/content/Language_ca.properties
@@ -14,6 +14,7 @@ no-table-views-were-found-with-this-name-try-searching-again-with-a-different-na
 retrieving-all-form-views=S'estan recuperant totes les vistes de formulari...
 retrieving-all-table-views=S'estan recuperant totes les vistes de taula...
 select-a-data-object-to-start-gathering-business-data=Seleccioneu un objecte de dades per començar a recopilar dades empresarials.
+step=Step (Automatic Copy)
 table-view=Vista de taula
 unable-to-retrieve-form-views=No s'han pogut recuperar les vistes de formulari.
 unable-to-retrieve-table-views=No s'han pogut recuperar les vistes de taula.
