--- a/modules/dxp/apps/app-builder-workflow/app-builder-workflow-lang/src/main/resources/content/Language_cs.properties
+++ b/modules/dxp/apps/app-builder-workflow/app-builder-workflow-lang/src/main/resources/content/Language_cs.properties
@@ -14,6 +14,7 @@ no-table-views-were-found-with-this-name-try-searching-again-with-a-different-na
 retrieving-all-form-views=Načítání všech zobrazení formulářů... (Automatic Translation)
 retrieving-all-table-views=Načítání všech zobrazení tabulek... (Automatic Translation)
 select-a-data-object-to-start-gathering-business-data=Vyberte datový objekt a začněte shromažďovat obchodní data. (Automatic Translation)
+step=Step (Automatic Copy)
 table-view=Zobrazení tabulky (Automatic Translation)
 unable-to-retrieve-form-views=Nelze načíst zobrazení formulářů. (Automatic Translation)
 unable-to-retrieve-table-views=Nelze načíst zobrazení tabulek. (Automatic Translation)
