--- a/modules/dxp/apps/app-builder-workflow/app-builder-workflow-lang/src/main/resources/content/Language_de.properties
+++ b/modules/dxp/apps/app-builder-workflow/app-builder-workflow-lang/src/main/resources/content/Language_de.properties
@@ -14,6 +14,7 @@ no-table-views-were-found-with-this-name-try-searching-again-with-a-different-na
 retrieving-all-form-views=Formularansichten werden abgerufen...
 retrieving-all-table-views=Tabellenansichten werden abgerufen...
 select-a-data-object-to-start-gathering-business-data=Wählen Sie ein Datenobjekt aus, um mit dem Sammeln von Geschäftsdaten zu beginnen.
+step=Step (Automatic Copy)
 table-view=Tabellenansicht
 unable-to-retrieve-form-views=Die Formularansichten konnten nicht abgerufen werden.
 unable-to-retrieve-table-views=Die Tabellenansichten konnten nicht abgerufen werden.
