--- a/modules/dxp/apps/app-builder-workflow/app-builder-workflow-lang/src/main/resources/content/Language_el.properties
+++ b/modules/dxp/apps/app-builder-workflow/app-builder-workflow-lang/src/main/resources/content/Language_el.properties
@@ -14,6 +14,7 @@ no-table-views-were-found-with-this-name-try-searching-again-with-a-different-na
 retrieving-all-form-views=Ανάκτηση όλων των προβολών φόρμας... (Automatic Translation)
 retrieving-all-table-views=Ανάκτηση όλων των προβολών πίνακα... (Automatic Translation)
 select-a-data-object-to-start-gathering-business-data=Επιλέξτε ένα αντικείμενο δεδομένων για να ξεκινήσετε τη συλλογή επιχειρηματικών δεδομένων. (Automatic Translation)
+step=Step (Automatic Copy)
 table-view=Προβολή πίνακα (Automatic Translation)
 unable-to-retrieve-form-views=Δεν είναι δυνατή η ανάκτηση προβολών φόρμας. (Automatic Translation)
 unable-to-retrieve-table-views=Δεν είναι δυνατή η ανάκτηση προβολών πίνακα. (Automatic Translation)
