--- a/modules/dxp/apps/app-builder-workflow/app-builder-workflow-lang/src/main/resources/content/Language_en.properties
+++ b/modules/dxp/apps/app-builder-workflow/app-builder-workflow-lang/src/main/resources/content/Language_en.properties
@@ -14,6 +14,7 @@ no-table-views-were-found-with-this-name-try-searching-again-with-a-different-na
 retrieving-all-form-views=Retrieving all form views...
 retrieving-all-table-views=Retrieving all table views...
 select-a-data-object-to-start-gathering-business-data=Select a data object to start gathering business data.
+step=Step
 table-view=Table View
 unable-to-retrieve-form-views=Unable to retrieve form views.
 unable-to-retrieve-table-views=Unable to retrieve table views.
