--- a/modules/dxp/apps/app-builder-workflow/app-builder-workflow-lang/src/main/resources/content/Language_es.properties
+++ b/modules/dxp/apps/app-builder-workflow/app-builder-workflow-lang/src/main/resources/content/Language_es.properties
@@ -14,6 +14,7 @@ no-table-views-were-found-with-this-name-try-searching-again-with-a-different-na
 retrieving-all-form-views=Recuperando todas las vistas de formulario…
 retrieving-all-table-views=Recuperando todas las vistas de tabla…
 select-a-data-object-to-start-gathering-business-data=Seleccione un objeto de datos para empezar a recopilar datos empresariales.
+step=Step (Automatic Copy)
 table-view=Vista de tabla
 unable-to-retrieve-form-views=No se pueden recuperar las vistas de formulario.
 unable-to-retrieve-table-views=No se pueden recuperar las vistas de tabla.
