--- a/modules/dxp/apps/app-builder-workflow/app-builder-workflow-lang/src/main/resources/content/Language_et.properties
+++ b/modules/dxp/apps/app-builder-workflow/app-builder-workflow-lang/src/main/resources/content/Language_et.properties
@@ -14,6 +14,7 @@ no-table-views-were-found-with-this-name-try-searching-again-with-a-different-na
 retrieving-all-form-views=Kõigi vormivaadete toomine... (Automatic Translation)
 retrieving-all-table-views=Kõigi tabelivaadete toomine... (Automatic Translation)
 select-a-data-object-to-start-gathering-business-data=Äriandmete kogumise alustamiseks valige andmeobjekt. (Automatic Translation)
+step=Step (Automatic Copy)
 table-view=Tabelivaade (Automatic Translation)
 unable-to-retrieve-form-views=Vormivaateid ei saa tuua. (Automatic Translation)
 unable-to-retrieve-table-views=Tabelivaateid ei saa tuua. (Automatic Translation)
