--- a/modules/dxp/apps/app-builder-workflow/app-builder-workflow-lang/src/main/resources/content/Language_fa.properties
+++ b/modules/dxp/apps/app-builder-workflow/app-builder-workflow-lang/src/main/resources/content/Language_fa.properties
@@ -14,6 +14,7 @@ no-table-views-were-found-with-this-name-try-searching-again-with-a-different-na
 retrieving-all-form-views=بازیابی همه نماهای فرم... (Automatic Translation)
 retrieving-all-table-views=بازیابی همه نماهای جدول... (Automatic Translation)
 select-a-data-object-to-start-gathering-business-data=یک شئ داده ها را برای شروع جمع آوری داده های کسب وکار انتخاب کنید. (Automatic Translation)
+step=Step (Automatic Copy)
 table-view=نمای جدول (Automatic Translation)
 unable-to-retrieve-form-views=قادر به بازیافتن نماهای فرم نمی باشد. (Automatic Translation)
 unable-to-retrieve-table-views=قادر به بازیابی نماهای جدول نمی باشد. (Automatic Translation)
