--- a/modules/dxp/apps/app-builder-workflow/app-builder-workflow-lang/src/main/resources/content/Language_fi.properties
+++ b/modules/dxp/apps/app-builder-workflow/app-builder-workflow-lang/src/main/resources/content/Language_fi.properties
@@ -14,6 +14,7 @@ no-table-views-were-found-with-this-name-try-searching-again-with-a-different-na
 retrieving-all-form-views=Noudetaan kaikki lomakenäkymät...
 retrieving-all-table-views=Noudetaan kaikki taulukkonäkymät...
 select-a-data-object-to-start-gathering-business-data=Valitse dataobjekti aloittaaksesi liiketoimintatietojen keräämisen.
+step=Step (Automatic Copy)
 table-view=Taulukkonäkymä
 unable-to-retrieve-form-views=Lomakenäkymiä ei voitu noutaa.
 unable-to-retrieve-table-views=Taulukkonäkymiä ei voitu noutaa.
