--- a/modules/dxp/apps/app-builder-workflow/app-builder-workflow-lang/src/main/resources/content/Language_fr.properties
+++ b/modules/dxp/apps/app-builder-workflow/app-builder-workflow-lang/src/main/resources/content/Language_fr.properties
@@ -14,6 +14,7 @@ no-table-views-were-found-with-this-name-try-searching-again-with-a-different-na
 retrieving-all-form-views=Récupération de toutes les affichages de formulaire…
 retrieving-all-table-views=Récupération de toutes les affichages de tableau…
 select-a-data-object-to-start-gathering-business-data=Sélectionnez un objet de données pour commencer à récupérer des données professionnelles.
+step=Step (Automatic Copy)
 table-view=Affichage de tableau
 unable-to-retrieve-form-views=Impossible de récupérer les affichages de formulaire.
 unable-to-retrieve-table-views=Impossible de récupérer les affichages de tableau.
