--- a/modules/dxp/apps/app-builder-workflow/app-builder-workflow-lang/src/main/resources/content/Language_fr_CA.properties
+++ b/modules/dxp/apps/app-builder-workflow/app-builder-workflow-lang/src/main/resources/content/Language_fr_CA.properties
@@ -14,6 +14,7 @@ no-table-views-were-found-with-this-name-try-searching-again-with-a-different-na
 retrieving-all-form-views=Retrieving all form views... (Automatic Copy)
 retrieving-all-table-views=Retrieving all table views... (Automatic Copy)
 select-a-data-object-to-start-gathering-business-data=Select a data object to start gathering business data. (Automatic Copy)
+step=Step (Automatic Copy)
 table-view=Table View (Automatic Copy)
 unable-to-retrieve-form-views=Unable to retrieve form views. (Automatic Copy)
 unable-to-retrieve-table-views=Unable to retrieve table views. (Automatic Copy)
