--- a/modules/dxp/apps/app-builder-workflow/app-builder-workflow-lang/src/main/resources/content/Language_hi_IN.properties
+++ b/modules/dxp/apps/app-builder-workflow/app-builder-workflow-lang/src/main/resources/content/Language_hi_IN.properties
@@ -14,6 +14,7 @@ no-table-views-were-found-with-this-name-try-searching-again-with-a-different-na
 retrieving-all-form-views=सभी रूप विचारों को पुनः प्राप्त करना ... (Automatic Translation)
 retrieving-all-table-views=सभी टेबल व्यू प्राप्त करना... (Automatic Translation)
 select-a-data-object-to-start-gathering-business-data=व्यावसायिक डेटा एकत्र करना शुरू करने के लिए डेटा ऑब्जेक्ट चुनें। (Automatic Translation)
+step=Step (Automatic Copy)
 table-view=टेबल व्यू (Automatic Translation)
 unable-to-retrieve-form-views=फॉर्म विचारों को पुनः प्राप्त करने में असमर्थ। (Automatic Translation)
 unable-to-retrieve-table-views=टेबल दृश्यों को पुनः प्राप्त करने में असमर्थ। (Automatic Translation)
