--- a/modules/dxp/apps/app-builder-workflow/app-builder-workflow-lang/src/main/resources/content/Language_hu.properties
+++ b/modules/dxp/apps/app-builder-workflow/app-builder-workflow-lang/src/main/resources/content/Language_hu.properties
@@ -14,6 +14,7 @@ no-table-views-were-found-with-this-name-try-searching-again-with-a-different-na
 retrieving-all-form-views=Az összes űrlap-nézet beolvasása...
 retrieving-all-table-views=Az összes táblázat-nézet beolvasása...
 select-a-data-object-to-start-gathering-business-data=Az üzleti adatok gyűjtésének megkezdéséhez válasszon ki egy adatobjektumot.
+step=Step (Automatic Copy)
 table-view=Táblázat-nézet
 unable-to-retrieve-form-views=Nem lehet beolvasni az űrlap-nézeteket.
 unable-to-retrieve-table-views=Nem lehet beolvasni az táblázat-nézeteket.
