--- a/modules/dxp/apps/app-builder-workflow/app-builder-workflow-lang/src/main/resources/content/Language_in.properties
+++ b/modules/dxp/apps/app-builder-workflow/app-builder-workflow-lang/src/main/resources/content/Language_in.properties
@@ -14,6 +14,7 @@ no-table-views-were-found-with-this-name-try-searching-again-with-a-different-na
 retrieving-all-form-views=Mengambil semua tampilan bentuk... (Automatic Translation)
 retrieving-all-table-views=Mengambil semua tampilan tabel... (Automatic Translation)
 select-a-data-object-to-start-gathering-business-data=Pilih objek data untuk mulai mengumpulkan data bisnis. (Automatic Translation)
+step=Step (Automatic Copy)
 table-view=Tampilan tabel (Automatic Translation)
 unable-to-retrieve-form-views=Tidak dapat mengambil tampilan bentuk. (Automatic Translation)
 unable-to-retrieve-table-views=Tidak dapat mengambil tampilan tabel. (Automatic Translation)
