--- a/modules/dxp/apps/app-builder-workflow/app-builder-workflow-lang/src/main/resources/content/Language_it.properties
+++ b/modules/dxp/apps/app-builder-workflow/app-builder-workflow-lang/src/main/resources/content/Language_it.properties
@@ -14,6 +14,7 @@ no-table-views-were-found-with-this-name-try-searching-again-with-a-different-na
 retrieving-all-form-views=Recupero di tutte le visualizzazioni modulo in corso... (Automatic Translation)
 retrieving-all-table-views=Recupero di tutte le viste tabella in corso... (Automatic Translation)
 select-a-data-object-to-start-gathering-business-data=Selezionare un oggetto dati per avviare la raccolta di dati aziendali. (Automatic Translation)
+step=Step (Automatic Copy)
 table-view=Vista tabella (Automatic Translation)
 unable-to-retrieve-form-views=Impossibile recuperare le visualizzazioni del modulo. (Automatic Translation)
 unable-to-retrieve-table-views=Impossibile recuperare le viste tabella. (Automatic Translation)
