--- a/modules/dxp/apps/app-builder-workflow/app-builder-workflow-lang/src/main/resources/content/Language_iw.properties
+++ b/modules/dxp/apps/app-builder-workflow/app-builder-workflow-lang/src/main/resources/content/Language_iw.properties
@@ -14,6 +14,7 @@ no-table-views-were-found-with-this-name-try-searching-again-with-a-different-na
 retrieving-all-form-views=מאחזר את כל תצוגות הטופס... (Automatic Translation)
 retrieving-all-table-views=מאחזר את כל תצוגות הטבלה... (Automatic Translation)
 select-a-data-object-to-start-gathering-business-data=בחר אובייקט נתונים כדי להתחיל באיסוף נתונים עסקיים. (Automatic Translation)
+step=Step (Automatic Copy)
 table-view=תצוגת טבלה (Automatic Translation)
 unable-to-retrieve-form-views=אין אפשרות לאחזר תצוגות טופס. (Automatic Translation)
 unable-to-retrieve-table-views=אין אפשרות לאחזר תצוגות טבלה. (Automatic Translation)
