--- a/modules/dxp/apps/app-builder-workflow/app-builder-workflow-lang/src/main/resources/content/Language_ja.properties
+++ b/modules/dxp/apps/app-builder-workflow/app-builder-workflow-lang/src/main/resources/content/Language_ja.properties
@@ -14,6 +14,7 @@ no-table-views-were-found-with-this-name-try-searching-again-with-a-different-na
 retrieving-all-form-views=すべてのフォームビューを取得しています...
 retrieving-all-table-views=すべてのテーブルビューを取得しています...
 select-a-data-object-to-start-gathering-business-data=業務データの収集を開始するデータオブジェクトを選択してください。
+step=Step (Automatic Copy)
 table-view=テーブルビュー
 unable-to-retrieve-form-views=フォームビューを取得できません。
 unable-to-retrieve-table-views=テーブルビューを取得できません。
