--- a/modules/dxp/apps/app-builder-workflow/app-builder-workflow-lang/src/main/resources/content/Language_ko.properties
+++ b/modules/dxp/apps/app-builder-workflow/app-builder-workflow-lang/src/main/resources/content/Language_ko.properties
@@ -14,6 +14,7 @@ no-table-views-were-found-with-this-name-try-searching-again-with-a-different-na
 retrieving-all-form-views=모든 양식 뷰 검색 중... (Automatic Translation)
 retrieving-all-table-views=모든 테이블 뷰 검색 중... (Automatic Translation)
 select-a-data-object-to-start-gathering-business-data=비즈니스 데이터 수집을 시작하려면 데이터 개체를 선택합니다. (Automatic Translation)
+step=Step (Automatic Copy)
 table-view=테이블 보기 (Automatic Translation)
 unable-to-retrieve-form-views=양식 뷰를 검색할 수 없습니다. (Automatic Translation)
 unable-to-retrieve-table-views=테이블 뷰를 검색할 수 없습니다. (Automatic Translation)
