--- a/modules/dxp/apps/app-builder-workflow/app-builder-workflow-lang/src/main/resources/content/Language_lt.properties
+++ b/modules/dxp/apps/app-builder-workflow/app-builder-workflow-lang/src/main/resources/content/Language_lt.properties
@@ -14,6 +14,7 @@ no-table-views-were-found-with-this-name-try-searching-again-with-a-different-na
 retrieving-all-form-views=Nuskaitomi visi formos rodiniai... (Automatic Translation)
 retrieving-all-table-views=Nuskaitomi visi lentelės rodiniai... (Automatic Translation)
 select-a-data-object-to-start-gathering-business-data=Pasirinkite duomenų objektą, kad pradėtumėte rinkti verslo duomenis. (Automatic Translation)
+step=Step (Automatic Copy)
 table-view=Lentelės rodinys (Automatic Translation)
 unable-to-retrieve-form-views=Neįmanoma nuskaityti formos rodinių. (Automatic Translation)
 unable-to-retrieve-table-views=Lentelės rodinių nuskaityti neįmanoma. (Automatic Translation)
