--- a/modules/dxp/apps/app-builder-workflow/app-builder-workflow-lang/src/main/resources/content/Language_nb.properties
+++ b/modules/dxp/apps/app-builder-workflow/app-builder-workflow-lang/src/main/resources/content/Language_nb.properties
@@ -14,6 +14,7 @@ no-table-views-were-found-with-this-name-try-searching-again-with-a-different-na
 retrieving-all-form-views=Henter alle skjemavisninger... (Automatic Translation)
 retrieving-all-table-views=Henter alle tabellvisninger... (Automatic Translation)
 select-a-data-object-to-start-gathering-business-data=Velg et dataobjekt for å begynne å samle inn forretningsdata. (Automatic Translation)
+step=Step (Automatic Copy)
 table-view=Tabellvisning (Automatic Translation)
 unable-to-retrieve-form-views=Kan ikke hente skjemavisninger. (Automatic Translation)
 unable-to-retrieve-table-views=Kan ikke hente tabellvisninger. (Automatic Translation)
