--- a/modules/dxp/apps/app-builder-workflow/app-builder-workflow-lang/src/main/resources/content/Language_nl.properties
+++ b/modules/dxp/apps/app-builder-workflow/app-builder-workflow-lang/src/main/resources/content/Language_nl.properties
@@ -14,6 +14,7 @@ no-table-views-were-found-with-this-name-try-searching-again-with-a-different-na
 retrieving-all-form-views=Alle formulierweergaven worden opgehaald ...
 retrieving-all-table-views=Alle tabelweergaven worden opgehaald ...
 select-a-data-object-to-start-gathering-business-data=Selecteer een gegevensobject om bedrijfsgegevens te beginnen verzamelen.
+step=Step (Automatic Copy)
 table-view=Tabelweergave
 unable-to-retrieve-form-views=Formulierweergaven ophalen lukt niet.
 unable-to-retrieve-table-views=Tabelweergaven ophalen lukt niet.
