--- a/modules/dxp/apps/app-builder-workflow/app-builder-workflow-lang/src/main/resources/content/Language_pl.properties
+++ b/modules/dxp/apps/app-builder-workflow/app-builder-workflow-lang/src/main/resources/content/Language_pl.properties
@@ -14,6 +14,7 @@ no-table-views-were-found-with-this-name-try-searching-again-with-a-different-na
 retrieving-all-form-views=Trwa trwa pobieranie wszystkich widoków formularza... (Automatic Translation)
 retrieving-all-table-views=Trwa pobieranie wszystkich widoków tabeli... (Automatic Translation)
 select-a-data-object-to-start-gathering-business-data=Wybierz obiekt danych, aby rozpocząć zbieranie danych biznesowych. (Automatic Translation)
+step=Step (Automatic Copy)
 table-view=Widok tabeli (Automatic Translation)
 unable-to-retrieve-form-views=Nie można pobrać widoków formularza. (Automatic Translation)
 unable-to-retrieve-table-views=Nie można pobrać widoków tabeli. (Automatic Translation)
