--- a/modules/dxp/apps/app-builder-workflow/app-builder-workflow-lang/src/main/resources/content/Language_pt_BR.properties
+++ b/modules/dxp/apps/app-builder-workflow/app-builder-workflow-lang/src/main/resources/content/Language_pt_BR.properties
@@ -14,6 +14,7 @@ no-table-views-were-found-with-this-name-try-searching-again-with-a-different-na
 retrieving-all-form-views=Recuperando todas as visualizações de formulário...
 retrieving-all-table-views=Recuperando todas as visualizações de tabela...
 select-a-data-object-to-start-gathering-business-data=Selecionar um objeto de dados para começar a coletar dados de negócios.
+step=Step (Automatic Copy)
 table-view=Visualização de tabela
 unable-to-retrieve-form-views=Não foi possível recuperar as visualizações do formulário.
 unable-to-retrieve-table-views=Não foi possível recuperar as visualizações da tabela.
