--- a/modules/dxp/apps/app-builder-workflow/app-builder-workflow-lang/src/main/resources/content/Language_pt_PT.properties
+++ b/modules/dxp/apps/app-builder-workflow/app-builder-workflow-lang/src/main/resources/content/Language_pt_PT.properties
@@ -14,6 +14,7 @@ no-table-views-were-found-with-this-name-try-searching-again-with-a-different-na
 retrieving-all-form-views=Recuperando todas as visualizações de formulário... (Automatic Translation)
 retrieving-all-table-views=Recuperando todas as vistas da mesa... (Automatic Translation)
 select-a-data-object-to-start-gathering-business-data=Selecione um objeto de dados para começar a coletar dados de negócios. (Automatic Translation)
+step=Step (Automatic Copy)
 table-view=Vista da tabela (Automatic Translation)
 unable-to-retrieve-form-views=Não é possível recuperar pontos de vista do formulário. (Automatic Translation)
 unable-to-retrieve-table-views=Não é possível recuperar as visualizações da tabela. (Automatic Translation)
