--- a/modules/dxp/apps/app-builder-workflow/app-builder-workflow-lang/src/main/resources/content/Language_ro.properties
+++ b/modules/dxp/apps/app-builder-workflow/app-builder-workflow-lang/src/main/resources/content/Language_ro.properties
@@ -14,6 +14,7 @@ no-table-views-were-found-with-this-name-try-searching-again-with-a-different-na
 retrieving-all-form-views=Se regăsesc toate vizualizările de formular... (Automatic Translation)
 retrieving-all-table-views=Se regăsesc toate vizualizările de tabel... (Automatic Translation)
 select-a-data-object-to-start-gathering-business-data=Selectați un obiect de date pentru a începe colectarea datelor de firmă. (Automatic Translation)
+step=Step (Automatic Copy)
 table-view=Vizualizare tabel (Automatic Translation)
 unable-to-retrieve-form-views=Imposibil de regăsit vizualizările de formular. (Automatic Translation)
 unable-to-retrieve-table-views=Imposibil de regăsit vizualizările tabelului. (Automatic Translation)
