--- a/modules/dxp/apps/app-builder-workflow/app-builder-workflow-lang/src/main/resources/content/Language_ru.properties
+++ b/modules/dxp/apps/app-builder-workflow/app-builder-workflow-lang/src/main/resources/content/Language_ru.properties
@@ -14,6 +14,7 @@ no-table-views-were-found-with-this-name-try-searching-again-with-a-different-na
 retrieving-all-form-views=Получение всех видов формы... (Automatic Translation)
 retrieving-all-table-views=Получение всех представлений таблиц... (Automatic Translation)
 select-a-data-object-to-start-gathering-business-data=Выберите объект данных для начала сбора бизнес-данных. (Automatic Translation)
+step=Step (Automatic Copy)
 table-view=Представление таблицы (Automatic Translation)
 unable-to-retrieve-form-views=Не удается получить представления формы. (Automatic Translation)
 unable-to-retrieve-table-views=Невозможно получить представления таблицы. (Automatic Translation)
