--- a/modules/dxp/apps/app-builder-workflow/app-builder-workflow-lang/src/main/resources/content/Language_sk.properties
+++ b/modules/dxp/apps/app-builder-workflow/app-builder-workflow-lang/src/main/resources/content/Language_sk.properties
@@ -14,6 +14,7 @@ no-table-views-were-found-with-this-name-try-searching-again-with-a-different-na
 retrieving-all-form-views=Načítavajú sa všetky zobrazenia formulára... (Automatic Translation)
 retrieving-all-table-views=Načítavajú sa všetky zobrazenia tabuľky... (Automatic Translation)
 select-a-data-object-to-start-gathering-business-data=Vyberte údajový objekt na začatie zhromažďovania obchodných údajov. (Automatic Translation)
+step=Step (Automatic Copy)
 table-view=Zobrazenie tabuľky (Automatic Translation)
 unable-to-retrieve-form-views=Zobrazenia formulára sa nedajú načítať. (Automatic Translation)
 unable-to-retrieve-table-views=Zobrazenia tabuľky sa nedajú načítať. (Automatic Translation)
