--- a/modules/dxp/apps/app-builder-workflow/app-builder-workflow-lang/src/main/resources/content/Language_sl.properties
+++ b/modules/dxp/apps/app-builder-workflow/app-builder-workflow-lang/src/main/resources/content/Language_sl.properties
@@ -14,6 +14,7 @@ no-table-views-were-found-with-this-name-try-searching-again-with-a-different-na
 retrieving-all-form-views=Pridobivanje vseh pogledov obrazcev... (Automatic Translation)
 retrieving-all-table-views=Pridobivanje vseh pogledov v tabeli... (Automatic Translation)
 select-a-data-object-to-start-gathering-business-data=Izberite podatkovni predmet, da začnete zbirati poslovne podatke. (Automatic Translation)
+step=Step (Automatic Copy)
 table-view=Pogled tabele (Automatic Translation)
 unable-to-retrieve-form-views=Pogledov obrazca ni mogoče pridobiti. (Automatic Translation)
 unable-to-retrieve-table-views=Pogledov v tabeli ni mogoče pridobiti. (Automatic Translation)
