--- a/modules/dxp/apps/app-builder-workflow/app-builder-workflow-lang/src/main/resources/content/Language_sv.properties
+++ b/modules/dxp/apps/app-builder-workflow/app-builder-workflow-lang/src/main/resources/content/Language_sv.properties
@@ -14,6 +14,7 @@ no-table-views-were-found-with-this-name-try-searching-again-with-a-different-na
 retrieving-all-form-views=Hämtar alla formulärvyer...
 retrieving-all-table-views=Hämtar alla tabellvyer...
 select-a-data-object-to-start-gathering-business-data=Välj ett dataobjekt för att börja samla företagsdata.
+step=Step (Automatic Copy)
 table-view=Tabellvy
 unable-to-retrieve-form-views=Kan inte hämta formulärvyer.
 unable-to-retrieve-table-views=Kan inte hämta tabellvyer.
