--- a/modules/dxp/apps/app-builder-workflow/app-builder-workflow-lang/src/main/resources/content/Language_tr.properties
+++ b/modules/dxp/apps/app-builder-workflow/app-builder-workflow-lang/src/main/resources/content/Language_tr.properties
@@ -14,6 +14,7 @@ no-table-views-were-found-with-this-name-try-searching-again-with-a-different-na
 retrieving-all-form-views=Tüm form görünümleri alma... (Automatic Translation)
 retrieving-all-table-views=Tüm tablo görünümlerini alma... (Automatic Translation)
 select-a-data-object-to-start-gathering-business-data=İş verileri toplamaya başlamak için bir veri nesnesi seçin. (Automatic Translation)
+step=Step (Automatic Copy)
 table-view=Tablo Görünümü (Automatic Translation)
 unable-to-retrieve-form-views=Form görünümleri alınamıyor. (Automatic Translation)
 unable-to-retrieve-table-views=Tablo görünümleri alınamıyor. (Automatic Translation)
