--- a/modules/dxp/apps/app-builder-workflow/app-builder-workflow-lang/src/main/resources/content/Language_vi.properties
+++ b/modules/dxp/apps/app-builder-workflow/app-builder-workflow-lang/src/main/resources/content/Language_vi.properties
@@ -14,6 +14,7 @@ no-table-views-were-found-with-this-name-try-searching-again-with-a-different-na
 retrieving-all-form-views=Lấy tất cả các dạng xem biểu mẫu... (Automatic Translation)
 retrieving-all-table-views=Truy xuất tất cả các xem bảng... (Automatic Translation)
 select-a-data-object-to-start-gathering-business-data=Chọn đối tượng dữ liệu để bắt đầu thu thập dữ liệu doanh nghiệp. (Automatic Translation)
+step=Step (Automatic Copy)
 table-view=Xem bảng (Automatic Translation)
 unable-to-retrieve-form-views=Không thể truy xuất dạng xem. (Automatic Translation)
 unable-to-retrieve-table-views=Không thể truy xuất xem bảng. (Automatic Translation)
