--- a/modules/dxp/apps/app-builder-workflow/app-builder-workflow-lang/src/main/resources/content/Language_zh_TW.properties
+++ b/modules/dxp/apps/app-builder-workflow/app-builder-workflow-lang/src/main/resources/content/Language_zh_TW.properties
@@ -14,6 +14,7 @@ no-table-views-were-found-with-this-name-try-searching-again-with-a-different-na
 retrieving-all-form-views=搜尋的表格表中... (Automatic Translation)
 retrieving-all-table-views=搜尋的表格... (Automatic Translation)
 select-a-data-object-to-start-gathering-business-data=選擇數據物件以開始收集業務數據。 (Automatic Translation)
+step=Step (Automatic Copy)
 table-view=表檢視 (Automatic Translation)
 unable-to-retrieve-form-views=無法檢索表單視圖。 (Automatic Translation)
 unable-to-retrieve-table-views=無法檢索表視圖。 (Automatic Translation)
